gramdictru/wwwroot/css/site.css
/* ... */
code, word-end {
    font-family: 'Montserrat';
    font-style: italic;
}

word-end {
    white-space: nowrap;
}

code em, .emphasis {
    font-style: italic;
}

/* Prevent superscripts and subscripts from affecting line-height */
sup, sub {
    vertical-align: baseline;
    position: relative;
    top: -0.4em;
}
sub {
    top: 0.4em;
}

#author {
    text-align: center;
    font-size: 20px;
    padding-top: 2em;
    font-family: 'Cormorant Garamond';
    font-weight: 500;
}

hr {
    width: 10%;
    margin-top: 1em;
    margin-bottom: 1em;
}

h1 {
    -webkit-margin-before: 0.3em;
}

.boxed-cross:before
{
    content: "⌧"
}
.cross:before
{
    content: "✕"
}

table.left-aligned tr td {
    text-align: left;
    vertical-align: top;
}

table.left-aligned {
    margin-left: 2em;
    margin-top: 0.4em;
    margin-bottom: 0.4em;
}

table.left-aligned tr td:nth-child(1) {
    padding-left: 0;
    font-weight: bold;
    min-width: 6em;
}

table.left-aligned tr td:nth-last-child(1) {
    padding-right: 0;
}

.letter {
    font-weight: bold;
}

.signature {
    text-align: right;
    margin-right: 20%;
    margin-top: 2em;
    margin-bottom: 2em;
    font-style: italic;
}

ul#contents {
    text-align: left;
}

@media (max-width: 500px) {
    ul#contents {
        padding-left: 1.2em;
    }

    ul#contents ul {
        padding-left: 1.2em;
    }
}

.footnote {
    font-size: 12px;
    color: #898989;
    margin-top: 30px;

}

.entry {
    margin-left: 4em;
    text-indent: 0;
}

.row .column {
    float: left;
    width: 50%;
    height: auto; 
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

.tr1 {
    border-right: solid 1px #000000;
    border-collapse: collapse;
}

@media screen and (max-width: 600px) {
    .column {
        width: 100%;
    }
    .tr1 {
        border-right: solid 0px #000000 !important;
    }
}

.column1 {
    float: left;
    width: 100%;
    height: auto;
}

.row .column table tr td {
    text-align: left !important;
    padding-right: 15px !important; 
}

.row .column table {
    border-collapse: collapse;
    text-align: left;
}

.drob {
    vertical-align: middle;
    display: inline-block;
}

.drob div:first-child {
    border-bottom: solid 1px; 
}

.drob div {
    text-align: center;
}

.big-slash {
    vertical-align: middle;
    display: table-cell;
    font-size: 200%
}

.column table td {
    border: none;
}

table .left-aligned td {
    border: none;
}

#search-react-root {
    position: fixed;
    width: 100vw;
    z-index: 999;
}

#search-react-root.has-searched {
    position: unset;
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.has-searched .search-bar {
    margin-bottom: unset;
}

.search-bar {
    font-size: larger;
    margin-bottom: var(--search-bar-margin);
    width: 100%;
}

.search-bar-wrapper {
    background-color: #333333;
}

.centerer {
    text-align: left;
    margin: 0 auto;
    padding-left: var(--body-padding);
    padding-right: var(--body-padding);
    max-width: 860px;
}

.search-controls a.contents-link {
    border-right: 1px solid #F2F2F2;
    height: 34px;
    line-height: 34px;
    display: flex;
    align-items: center;
}

.search-controls a.contents-link i{display: none; font-size: 20px;}
@media (max-width: 1170px){
    .search-controls a.contents-link i{display: inline-block;}
    .search-controls a.contents-link span{display: none;}
}

h1, h2, h3, h4, h5, h6 {
    font-family: Cormorant Garamond;
}

h6 {
    font-family: Cormorant Garamond;
    font-weight: 700;
    font-size: 16px;
}

h5 {
    font-size: 18px;
}

h4 {
    font-size: 22px;
}

a.contents-link {
    color: white;
    text-decoration: none;
    font-weight: 500;
    font-size: 14px;
    text-transform: uppercase;
    padding-right: 20px;
    text-align: center;
}

.search-input {
    margin-left: 20px;
    height: 24px;
    border: 0;
    flex-grow: 1;
    padding: 0 0 0 .5em;
    font-size: 14px;
    font-weight: 500;
}

.search-controls {
    text-align: left;
    display: flex;
    align-items: center;
    position: relative;
}

.results-table {
    column-count: 3;
    column-width: 350px;
}

.results-table.short-results {
    column-count: 1;
    column-width: auto;
    max-width: 600px;
    margin: 0 auto;
}

.result-entry {
    padding-left: 2rem;
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: minmax(40%, max-content) minmax(1.5rem, max-content) 1fr;
    margin: 0 auto;
}

.lemma {
    white-space: nowrap;
    font-weight: bold;
    padding-right: 0.5rem;
    display: flex;
    flex-direction: column;
    color: #555555;
}

.grammar b {
    color: #555555;
}

.symbol {
    text-align: left;
    display: inline-block;
    flex-direction: column;
    white-space: nowrap;
}

.grammar {
    padding-left: 0.5rem;
    text-align: left;
    display: inline;
    flex-direction: column;
}

.infinite-scroll-component {
    overflow-x: hidden !important;
}

.infinite-scroll-component hr{
    margin: 26px auto;
    width: 62%;
    background: #9a9a9a;
    color: #9a9a9a !important;
    border: none;
    height: 1px;
}

.loading-bar {
    position: fixed;
    width: 100%;
    background-color: black;
    padding-top: 0.3rem;
}

.loading-bar > * {
    content: "";
    display: inline;
    position: absolute;
    width: 0;
    height: 100%;
    left: 50%;
    text-align: center;
}

.loading-bar > *:nth-child(1) {
    background-color: blue;
    left: 0;
    width: 100%;
}

.loading-bar > *:nth-child(2) {
    background-color: #da4733;
    animation: loading 3s linear infinite;
}

.loading-bar > *:nth-child(3) {
    background-color: #3b78e7;
    animation: loading 3s linear 1s infinite;
}

.loading-bar > *:nth-child(4) {
    background-color: #fdba2c;
    animation: loading 3s linear 2s infinite;
}

@keyframes loading {
    from {left: 50%; width: 0;z-index:100;}
    33.3333% {left: 0; width: 100%;z-index: 10;}
    to {left: 0; width: 100%;}
}
/* ... */

